# myblog

./: .buildinfo  .envrc  .gitignore  .gitmodules  .nojekyll  CNAME  LICENSE  Makefile  README.md  about.html  blog.html  content.html  genindex.html  hugo.toml  index-rss.xml  index.html  index.xml  intro.html  listings.json  markdown.html  objects.inv  pyproject.toml  requirements.txt  robots.txt  search.html  search.json  searchindex.js  sitemap.xml
.doctrees/: content.doctree  environment.pickle  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
.doctrees/content/: markdown.doctree
.doctrees/notebook/: notebooks.doctree
.github/workflows/: babelquarto.yml  book.yaml  hugo.yaml
Machine_Learning/: ML - Supervised Learning.html  ML - Unsupervised Learning.html  SVM.html
World of Data/: index.html
World of Data/machine learning/: ML - Supervised Learning.html  ML - Unsupervised Learning.html  SVM.html  index.html
World of Data/notes/: numpy task#1 solution.html  numpy task#1.html
_sources/: intro.md
blog/: drafts.html  index.html
coba/: index.html
content/: content.html  markdown.html
id/: about.html  index-rss.xml  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
machine learning/: ML - Supervised Learning.html  ML - Unsupervised Learning.html  SVM.html  index.html
myblog/: _quarto.yml  about.id.qmd  about.qmd  index.id.qmd  index.qmd
mybook/: _config.yml  _toc.yml  conf.py  intro.md  requirements.txt
notebook/: markdown-notebooks.html  notebooks.html
notes/: numpy task#1.html
(+204 files in other folders)
